# mj_tg_bot

./: .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
src/: dis_bot.py  manage.py  pyproject.toml  run_bot.py
src/main/: admin.py  banwords.txt  constants.py  enums.py  keyboards.py  models.py  tasks.py  utils.py
src/main/handlers/: callbacks.py  commands.py  helpers.py  prices.py  queue.py  routers.py  utils.py
src/main/keyboards/: commands.py  interactions.py  pay.py
src/main/migrations/: 0001_initial.py  0002_telegramanswer.py  0003_user_chat_id_user_generations_count_and_more.py  0004_alter_user_chat_id.py  0005_discordqueue_alter_user_managers.py  0006_discordqueue_message_hash.py  0007_alter_discordqueue_message_hash.py  0008_rename_chat_id_discordqueue_telegram_chat_id_and_more.py  0009_discordqueue_telegram_user_user_role.py  0010_alter_user_managers.py  0011_alter_discordqueue_telegram_chat_id.py  0012_mjuser_rename_discordqueue_prompt.py  0013_alter_prompt_telegram_user.py  0014_pay.py  0015_referral_is_active.py  0016_prompt_parent_id.py  0017_remove_prompt_parent_id_prompt_action.py  0018_rename_action_prompt_caption.py  0019_delete_mjuser.py  0020_describe_alter_user_password_and_more.py  0021_blend.py  0022_blend_created_at_describe_created_at.py  0023_rename_generations_count_user_balance.py  0024_remove_referral_is_active_referral_used_count.py  0025_gptcontext.py  0026_user_state.py  0027_referral_name.py  0028_remove_pay_item_pay_is_verified_pay_pay_id_and_more.py  0029_blend_last_message_id.py  0030_alter_pay_pay_id.py  0031_alter_user_balance.py  0032_referral_created_at_alter_user_chat_id.py  0033_blend_chat_id.py  0034_pay_merchant.py  0035_price_alter_banword_options_alter_blend_options_and_more.py  0036_alter_user_username.py  (+26 more)
src/t_bot/: __init__.py  asgi.py  caches.py  celery.py  settings.py  urls.py  wsgi.py
(+33 files in other folders)
