[tool.poetry]
name = "mj-tg-bot"
version = "0.1.0"
description = "Telegram bot with django admin panel"
authors = ["TimurGizatullin <timur.gizatullin@scalewill.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
psycopg2-binary = "^2.9.9"
python-dateutil = "^2.8.2"
apscheduler = "^3.10.4"
uvicorn = "^0.23.2"
requests = "^2.31.0"
discord-py = "^2.3.2"
pillow = "^10.0.1"
httplib2 = "^0.22.0"
loguru = "^0.7.2"
python-decouple = "^3.8"
redis = "^5.0.1"
celery = "^5.3.4"
django-celery-beat = "^2.5.0"
aiogram = "^3.1.1"
openai = "^0.28.1"
rq = "^1.15.1"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
translate = "^3.6.1"
aiogram-media-group = "^0.5.1"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
